Fixes overflowing of text to be more intutive in adapter create view

--- a/cdap-ui/app/features/adapters/etlapps.less
+++ b/cdap-ui/app/features/adapters/etlapps.less
@@ -121,14 +121,21 @@ body.theme-cdap.state-adapters-create {
 }
 body.theme-cdap.state-adapters-create {
 
-  .adapter-name-label {
-    max-width: 90%;
-    text-overflow: ellipsis;
-    overflow-x: auto;
-
-    &.adapter-canvas {
-      max-width: 85%;
+  [create-adapter-container] {
+    white-space: nowrap;
+    h2 {
+      margin: 0;
     }
+
+    .btn.btn-default {
+      width: 100%;
+    }
+  }
+
+  .adapter-name-label {
+    white-space: nowrap;
+    overflow: auto;
+    text-overflow: ellipsis;
   }
 
   .tab-pane .panel-default {
